dbus (1.8.0-2) UNRELEASED; urgency=medium

  * debian/rules: look for DEB_BUILD_PROFILES, the new name for
    DEB_BUILD_PROFILE

 -- Simon McVittie <smcv@debian.org>  Sat, 15 Feb 2014 13:43:08 +0000

dbus (1.8.0-1) unstable; urgency=low

  * New upstream stable release
    - add debian/copyright stanzas for some new BSD-licensed cmake macros

 -- Simon McVittie <smcv@debian.org>  Mon, 20 Jan 2014 15:05:53 +0000

dbus (1.7.10-2) unstable; urgency=low

  * Conditionalize libaudit and libcap-ng build-dependencies to [linux-any]
  * Explicitly enable libaudit, SELinux and systemd on Linux;
    do not enable them elsewhere

 -- Simon McVittie <smcv@debian.org>  Tue, 07 Jan 2014 12:12:15 +0000

dbus (1.7.10-1) unstable; urgency=low

  * Merge from experimental into unstable
  * New upstream release 1.7.10 (1.8 rc1)
  * Generate debian/dbus.install from a generic part and a Linux-specific
    part, since systemd metadata doesn't get installed on non-Linux any more

 -- Simon McVittie <smcv@debian.org>  Mon, 06 Jan 2014 19:43:36 +0000

dbus (1.7.8-1) experimental; urgency=low

  [ Laurent Bigonville ]
  * debian/rules: Re-add udeb_configure_flags that were lost during merge
    (Closes: #727774)

  [ Simon McVittie ]
  * Standards-Version: 3.9.5 (no changes needed)
  * Enable libaudit support so messages that violate SELinux policy go to the
    audit log (Closes: #727771)
  * New upstream release
    - add new dependency on libsystemd-journal-dev for linux-any

 -- Simon McVittie <smcv@debian.org>  Tue, 29 Oct 2013 13:07:02 +0000

dbus (1.7.6-2) experimental; urgency=low

  * debian/rules: FTBFS if new symbols or libraries are added
    without updating the symbols file
  * debian/copyright: list copyright holders and minor licenses
    (Closes: #726000)
  * Merge packaging changes from unstable:
    - Run `update-rc.d dbus defaults` instead of deprecated
      `update-rc.d dbus start ...` (Closes: #725923)